feat: migrate to manifest V3 - cleanup code (remove background content, remove console log etc...)

--- a/src/popup.html
+++ b/src/popup.html
@@ -201,28 +201,28 @@
     <!-- WEBFLOW HTML START -->
     <div class="sym-chrono-page">
       <img src="./images/icon128.png" loading="lazy" width="75" alt="" />
-      <h4>Airtable Editor Extension</h4>
+      <h4>Airtable Rich Text Editor Extension</h4>
       <div class="text-block-71">v0.01</div>
-      <div class="div-block-152">
+      <!-- <div class="div-block-152">
         <a
           href="https://www.notion.so/Notion-Chronometer-Tutorial-972c37bf45e9409baa36e9cf66874a52"
           target="_blank"
           class="link-button-large w-button"
           >See Tutorial (todo)</a
         >
-      </div>
+      </div> -->
       <div class="div-block-151">
         <a
-          href="https://forms.gle/MX4CqdiBAkSGCcqP6"
+          href="mailto:agadhgad@gmail.com"
           target="_blank"
           class="link-button-2 w-button"
-          >✌️ contact me</a
+          >✌️ contact the developer</a
         >
         <a
           href="https://www.buymeacoffee.com/amibane"
           target="_blank"
           class="link-button-2 w-button"
-          >☕️ buy me a coffee</a
+          >☕️ buy a coffee to the developer</a
         >
       </div>
     </div>
